// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vue custom wrapper 1`] = `
"<section id=\\"svelte-vue3\\" style=\\"border: 1px solid gray;\\" class=\\"section-css\\" name=\\"ben\\">
  <main class=\\"svelte-4hq7sh\\">
    <h1 class=\\"svelte-4hq7sh\\">Hello ben!</h1> <button>add count: 0</button> <button>update name: ben</button>
  </main>
</section>"
`;

exports[`Vue should render 1`] = `
"<div id=\\"svelte-wrapper\\" name=\\"ben\\">
  <main class=\\"svelte-4hq7sh\\">
    <h1 class=\\"svelte-4hq7sh\\">Hello ben!</h1> <button>add count: 0</button> <button>update name: ben</button>
  </main>
</div>"
`;
